--- a/hood/templates/profile.html
+++ b/hood/templates/profile.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 {{block.super}}
-<h1 class="text-center">{{userProfile.name}}'s Profile</h1>
+<h1 class="text-center">{{user.username}}'s Profile</h1>
 <div class="container">
     <div class="row">
         <div class="col-md-4">
