--- a/hood/templates/registration/registration_form.html
+++ b/hood/templates/registration/registration_form.html
@@ -23,7 +23,7 @@
             <div class="form-group">
               <input type="submit" class="btn btn-primary btn-sm" value="Sign Up">
             </div>
-            <p class="">Already have an account? <a class="pl-5" href="/accounts/login/">Sign up</a></p>
+            <p class="">Already have an account? <a class="pl-5" href="/accounts/login/">Sign in</a></p>
 
             <input type="hidden" name="next" value="{{next}}">
 
