--- a/hood/templates/post_neighborhood.html
+++ b/hood/templates/post_neighborhood.html
@@ -9,7 +9,7 @@
         <div class="col-md-3"></div>
         <div class="col-md-6">
 
-            <form action="{%url 'post_project'%}" method="POST" enctype="multipart/form-data">
+            <form action="{%url 'post_neighborhood'%}" method="POST" enctype="multipart/form-data">
                 {%csrf_token%}
 
                 {% bootstrap_form form %}
