--- a/hood/templates/navbar.html
+++ b/hood/templates/navbar.html
@@ -24,6 +24,7 @@
                             <li>
                                 <a href="{%url 'post_neighborhood' %}">Create NeighborHood</a>
                             </li>
+                            <li><a href="{% url 'business_list' %}">View Business</a></li>
                             <li><a href="/accounts/password/change">Change Password</a></li>
                             <li><a href="/logout">Logout</a></li>
                         </ul>
