--- a/hood/templates/single_business.html
+++ b/hood/templates/single_business.html
@@ -4,8 +4,8 @@
 
 {% block content %}
 {{block.super}}
-<h1>{{business.name}}</h1>
-<p>This business belong to - {{business.owner}}</p>
-<p>It is located in {{business.neighborhood.name}} estate, {{business.neighborhood.location}}</p>
-<p>{{business.name}} email address is {{business.email_address}}</p>
+<h1 class="text-center">{{business.name}}</h1>
+<p class="text-center">This business belong to - {{business.owner}}</p>
+<p class="text-center">It is located in {{business.neighborhood.name}} estate, {{business.neighborhood.location}}</p>
+<p class="text-center">{{business.name}} email address is {{business.email_address}}</p>
 {% endblock %}
