Add route to single neighborhood

--- a/hood/templates/navbar.html
+++ b/hood/templates/navbar.html
@@ -24,7 +24,8 @@
                             <li>
                                 <a href="{%url 'post_neighborhood' %}">Create NeighborHood</a>
                             </li>
-                            <li><a href="{% url 'business_list' %}">View Business</a></li>
+                            <li><a href="{% url 'business_list' %}">Business</a></li>
+                            <li><a href="{% url 'posts' %}">Posts</a></li>
                             <li><a href="/accounts/password/change">Change Password</a></li>
                             <li><a href="/logout">Logout</a></li>
                         </ul>
