--- a/hood/templates/single_post.html
+++ b/hood/templates/single_post.html
@@ -14,7 +14,7 @@
             <p>{{post.description}}</p>
             {% endautoescape %}
             <p>Posted by: {{post.user.username}}</p>
-            <p>Posted by: {{post.profile.name}}</p>
+            <!-- <p>Posted by: {{post.profile.name}}</p> -->
             <p>Neighborhood: {{post.neighborhood.name}}</p>
             <p>Posted since: {{post.pub_date|timesince}}</p>
         </div>
