--- a/hood/templates/base.html
+++ b/hood/templates/base.html
@@ -29,6 +29,46 @@
         nav a {
             text-decoration: none;
         }
+        .gallery {
+            border: 1px solid #ccc;
+        }
+        
+        .gallery:hover {
+            border: 1px solid #777;
+        }
+        
+        .gallery img {
+            width: 100%;
+            height: auto;
+        }
+        
+        .desc {
+            padding: 15px;
+            text-align: center;
+        }
+        
+        * {
+            box-sizing: border-box;
+        }
+        
+        .responsive {
+            padding: 0 6px;
+            float: left;
+            width: 24.99999%;
+        }
+
+        @media only screen and (max-width: 700px) {
+            .responsive {
+            width: 49.99999%;
+            margin: 6px 0;
+            }
+        }
+        
+        @media only screen and (max-width: 500px) {
+            .responsive {
+            width: 100%;
+            }
+        }
     </style>
     {% endblock %}
 </head>
