--- a/hood/templates/single_neighborhood.html
+++ b/hood/templates/single_neighborhood.html
@@ -40,5 +40,6 @@
         <p>There are no posts at this time.</p>
         <p>Create post <a href="{%url 'create_post' %}">Here</a></p>
     {% endif %}
+    <h2>Health/Police services</h2>
 </div>
 {% endblock %}
