Add some styling to pages

--- a/hood/templates/base.html
+++ b/hood/templates/base.html
@@ -20,10 +20,16 @@
     <style>   
         body {
             font-family: 'Zen Antique Soft', serif;
+            background: url(https://free4kwallpapers.com/uploads/originals/2015/10/24/i-live-at-the-highest-point-in-my-neighborhood.-wallpaper_.jpg);
+            
+            color: black;
         }
         
         a {
             color: black;
+            
+        }
+        a:hover {
             text-decoration: underline;
         }
         nav a {
