--- a/hood/templates/police.html
+++ b/hood/templates/police.html
@@ -9,7 +9,7 @@
         <div class="col-md-3"></div>
         <div class="col-md-6">
 
-            <form action="{%url 'post_services'%}" method="POST" enctype="multipart/form-data">
+            <form action="{%url 'post_police'%}" method="POST" enctype="multipart/form-data">
                 {%csrf_token%}
 
                 {% bootstrap_form form %}
