--- a/hood/templates/navbar.html
+++ b/hood/templates/navbar.html
@@ -27,6 +27,7 @@
                             <li><a href="{% url 'business_list' %}">Business</a></li>
                             <li><a href="{% url 'posts' %}">Posts</a></li>
                             <li><a href="/accounts/password/change">Change Password</a></li>
+                            <li><a href="/admin">Admin</a></li>
                             <li><a href="/logout">Logout</a></li>
                         </ul>
                     </li>
